@@ -1125,6 +1125,17 @@ data.frame <-
     return(x)
 }
 
+### Added for 3.1.0
+`$.data.frame` <- function(x,name) {
+  a <- x[[name]]
+  if (!is.null(a)) return(a)
+
+  a <- x[[name, exact=FALSE]]
+  if (!is.null(a)) warning("Name partially matched in data frame")
+  return(a)
+}
+   
+
 xpdrows.data.frame <- function(x, old.rows, new.rows)
 {
     nc <- length(x)
